--- a/src/App.css
+++ b/src/App.css
@@ -50,8 +50,8 @@ h1 {
   color: #222; /* Color un poco más oscuro para resaltar */
   margin-bottom: 30px; /* Aumenta el margen inferior para mayor separación */
   padding: 15px 30px; /* Aumenta el padding para títulos más grandes */
-  border-bottom: 2px solid #ddd; /* Línea un poco más gruesa */
-  text-align: left; /* Mismo centrado */
+  border-bottom: 3px solid #ddd; /* Línea un poco más gruesa */
+  /*text-align: left; /* Mismo centrado */
 }
 
 .parrafo {
@@ -60,7 +60,7 @@ h1 {
   line-height: 1.5; /* Aumenta el espacio entre líneas para mejorar la legibilidad */
   color: #333; /* Color de texto con buen contraste */
   margin-bottom: 20px; /* Margen inferior para separar párrafos */
-  padding: 10px; /* Relleno para agregar espacio alrededor del texto */
+  padding: 10px 50px; /* Relleno para agregar espacio alrededor del texto */
   text-align: left;
 }
 
@@ -78,9 +78,18 @@ h2 {
   letter-spacing: 1px;
   color: #333;
   margin-bottom: 20px;
-  padding: 10px 20px;
+  padding: 10px 5px;
   border-bottom: 1px solid #ddd;
   text-align: left;
+}
+
+h3{
+  font-family: Montserrat, sans-serif;
+  color: #333;
+  border-bottom: 1px solid #ddd;
+  text-align: left;
+  margin-bottom: 20px;
+  padding: 10px 30px;
 }
 
 
